# splinator

./: .coveragerc  .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  DOCUMENTATION_GUIDE.md  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  appveyor.yml  environment.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: publish.yml  python-package.yml
doc/: Makefile  api.rst  conf.py  index.rst  quick_start.rst
docs/: api.rst  conf.py  examples.rst  index.rst  installation.rst  quickstart.rst  requirements.txt
docs/source/: api.rst  conf.py  examples.rst  index.rst
examples/: README.txt  Untitled.ipynb  calibration_comparison.py  calibrator_model_comparison.ipynb  fit_on_splines.ipynb  metrics.ipynb  misc.ipynb  plot_classifier.py  plot_template.py  plot_transformer.py  sklearn_check.ipynb  spline_model_comparison.ipynb  ts_refinement_xgboost.py
splinator/: __init__.py  _template.py  esimators.py  estimators.py  monotonic_spline.py
splinator/tests/: test_common.py  test_helpers.py  test_linear_spline_logistic_regression.py  test_template.py
src/splinator/: __init__.py  estimators.py  metric_wrappers.py  metrics.py  monotonic_spline.py  temperature_scaling.py
src/splinator/estimators/: __init__.py  cdf_spline_calibrator.py  linear_spline_logistic_regression.py
tests/: common.py  test_helpers.py  test_linear_spline_logistic_regression.py  test_metrics.py  test_progressive_fitting.py  test_sample_weight.py  test_scikit_learn_estimator.py  test_temperature_scaling.py
