[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "splinator"
version = "0.2.0"
description = "Python library for fitting linear-spine based logistic regression for calibration."
authors = [
    {name = "Jiarui Xu", email = "jiarui.xu@affirm.com"},
]
dependencies = [
    "scipy<2.0.0,>=1.6.0",
    "scikit-learn<2.0.0,>=1.0.0",
    "numpy<2.0.0,>=1.19.0",
    "pandas<2.0.0,>=1.3.0",
]
requires-python = ">=3.7.1,<4.0"
readme = "README.md"
license = {text = "BSD-3-Clause"}
keywords = ["calibration", "logistic", "spline", "regression"]
classifiers = ["Programming Language :: Python :: 3", "License :: OSI Approved :: BSD License", "Operating System :: OS Independent"]

[project.optional-dependencies]
dev = [
    "pytest<8.0.0,>=7.1.2",
    "matplotlib<4.0.0,>=3.5.3",
    "mypy<1.0,>=0.971",
    "jupyter>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/splinator"]

