[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "splinator"
version = "0.2.0"
description = "Python library for fitting linear-spline based logistic regression for calibration."
authors = [
    {name = "Jiarui Xu", email = "jiarui.xu@affirm.com"},
]
maintainers = [
    {name = "Jiarui Xu", email = "jiarui.xu@affirm.com"},
]
dependencies = [
    "scipy<2.0.0,>=1.6.0",
    "scikit-learn<2.0.0,>=1.0.0",
    "numpy<2.0.0,>=1.19.0",
    "pandas<2.0.0,>=1.3.0",
]
requires-python = ">=3.7.1,<4.0"
readme = "README.md"
license = {text = "BSD-3-Clause"}
keywords = ["calibration", "logistic", "spline", "regression", "machine-learning", "scikit-learn"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/affirm/splinator"
Documentation = "https://splinator.readthedocs.io/"
Repository = "https://github.com/affirm/splinator"
Issues = "https://github.com/affirm/splinator/issues"
Changelog = "https://github.com/affirm/splinator/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest<8.0.0,>=7.1.2",
    "pytest-cov>=4.0.0",
    "matplotlib<4.0.0,>=3.5.3",
    "mypy<1.0,>=0.971",
    "jupyter>=1.0.0",
    "flake8>=5.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=3.0.0",
    "sphinx-autodoc-typehints>=2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/splinator"]

[tool.black]
line-length = 120
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

