[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "splinator"
dynamic = ["version"]
description = "Python library for fitting linear-spline based logistic regression for calibration."
authors = [
    {name = "Jiarui Xu", email = "jiarui.xu@affirm.com"},
]
dependencies = [
    "scipy>=1.6.0",
    "scikit-learn>=1.0.0",
    "numpy>=1.19.0",
    "pandas>=1.3.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "BSD-3-Clause"}
keywords = ["calibration", "logistic", "spline", "regression"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.1.2",
    "matplotlib>=3.5.3",
    "mypy>=0.971",
    "jupyter>=1.0.0",
]

[tool.hatch.version]
path = "src/splinator/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/splinator"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.1.2",
    "matplotlib>=3.5.3",
    "mypy>=0.971",
    "jupyter>=1.0.0",
]

